# GlucoseGit

./: .gitignore  .mcp.json  CLEANUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  HANDOFF.md  INSTALL.md  LICENSE  PHASE1_TO_PHASE2_TRANSITION.md  README.md  ROADMAP.archive-2026-04-27.md  ROADMAP.md  SECURITY.md  STABILITY.md  benchmark-save.mjs  biome.json  extract-images.mjs  flake.nix  index.html  package-lock.json  package.json  scratch-pixi.mjs  scratch.mjs  shell.nix  style.md  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
mcp/: README.md  geometry.mjs  geometry.test.mjs  glucose-mcp.mjs  glucose-peer.mjs  package.json
server/: README.md  telemetry_server.py
src/: App.css  App.tsx  components-smoke.test.tsx  constants.ts  e2e-workflows.test.ts  hook-order.test.ts  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  multiplayer.rs
src/canvas/: AnnotationBadges.tsx  AnnotationLayer.ts  ArrowSvgLayer.tsx  FolderSvgLayer.tsx  GlucoseCanvas.tsx  HtmlAnnotationLayer.tsx  MembraneRenderer.ts  Quadtree.ts  StoryboardLayer.ts  SvgAnnotationLayer.tsx  ZoneRenderer.ts  ZoneSelectorOverlay.tsx  arrowAnchor.test.ts  dropHandler.test.ts  dropHandler.ts  fileImport.ts  folderMirror.test.ts  folderMirror.ts  imageResize.test.ts  imageResize.ts  launchTile.test.tsx  lod.test.ts  lod.ts  navigation.test.ts  navigation.ts  textTile.test.tsx
src/components/: AppBridgeIcon.tsx  AppLaunchOverlay.tsx  ArrowDescriptionPanel.tsx  ArrowOptions.tsx  ArrowTextEditor.tsx  BoardTabs.tsx  CollabDebug.tsx  ColorPicker.tsx  DiagnosticsHUD.tsx  DomainsPanel.tsx  ExportMenu.tsx  FolderBreadcrumb.tsx  FolderViewportIndicator.tsx  Minimap.tsx  OrganizePanel.tsx  PanDebug.tsx  PanelDock.tsx  PluginPanel.tsx  PomodoroOverlay.tsx  PomodoroTimer.tsx  PresetPanel.tsx  SearchPanel.tsx  StoryboardControls.tsx  SyntaxEditor.tsx  TelemetryConsent.tsx  TemporalAnchorPrompt.tsx  TemporalRuler.tsx  TimelinePanel.tsx  Toast.tsx  Toolbar.tsx  UpdatePrompt.tsx  WebModeBanner.tsx
src/data/: defaultPresets.ts
src/multiplayer/: MultiplayerPanel.tsx  PeerCursorsLayer.tsx  assetChannel.integration.test.ts  assetChannel.ts  collab.integration.test.ts  collab.stress.test.ts  collabBridge.ts  collabHandle.ts  repo.ts  useMultiplayerSync.ts
src/store/: assetBlobs.test.ts  automerge.test.ts  automerge.ts  index.ts  mirrorGraph.test.ts  mirrorGraph.ts  projectSchema.ts  store-actions.test.ts  undo-redo.test.ts
src/telemetry/: perfMonitor.ts  telemetry.test.ts  telemetry.ts
src/types/: index.ts
src/utils/: assetRef.test.ts  assetRef.ts  assets.test.ts  assets.ts  autoVersion.integration.test.ts  autoVersion.test.ts  autoVersion.ts  bundle.integration.test.ts  bundle.test.ts  bundle.ts  bundleActions.ts  compaction.integration.test.ts  compaction.test.ts  compaction.ts  currentPath.ts  cursorWrap.ts  embedRoundtrip.test.ts  exportPng.ts  fileExistence.test.ts  fileExistence.ts  glucoseBus.ts  imageUpgrade.ts  layout.ts  loadKatexCss.ts  nanoid.ts  pathResolver.test.ts  pathResolver.ts  platform.ts  plugins.ts  project.ts  projectMigration.test.ts  (+12 more)
(+11 files in other folders)
