[package]
name = "glucose"
version = "1.0.1-beta.1"
description = "Glucose — canvas infini pour poser ses idées à plat"
authors = ["shazamifius"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glucose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLEANUP B-04 : rustls plutôt qu'OpenSSL natif (gain ~2-3 MB), pas de "blocking"
# (on est tout-async). On garde "json" pour la compat reqwest.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
# tokio "full" → features ciblées (gain modéré sur le binaire)
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread", "macros", "time", "net"] }
mime_guess = "2"
open = "5"
# Phase 8 — sonde matérielle (RAM/CPU) pour recommander le modèle Ollama adapté
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
# CLEANUP SEC-06 : parsing d'URL pour la protection SSRF
url = "2"
# CLEANUP SEC-05 : vérification SHA256 du binaire yt-dlp téléchargé
sha2 = "0.10"
hex = "0.4"
# Phase 7.5bis — Multi-utilisateur LAN
# mDNS-SD : découverte automatique des autres instances Glucose sur le LAN
mdns-sd = "0.13"
# WebSocket pour échanger les patches Automerge entre instances
tokio-tungstenite = "0.27"
futures-util = "0.3"

